Update bluetooth tray immediately when bluetooth is disabled.

Update the tray for the initial device list or when the bluetooth is disabled.

Bug: 791959
Change-Id: I2cbe3611edada33c2ef7794aad3785cc36ef711f
Reviewed-on: https://chromium-review.googlesource.com/818322
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522925}
Former-commit-id: 9044641b5a73aea7da5c3f9cbf769facc6af7862